@@ -1,27 +1,22 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.fractions.buildafraction.view.pictures;
 
-import fj.F;
 import fj.data.List;
 
-import java.awt.BasicStroke;
 import java.awt.Color;
 import java.awt.geom.RoundRectangle2D;
 
 import edu.colorado.phet.common.phetcommon.model.property.Property;
-import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.piccolophet.event.CursorHandler;
 import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.fractions.FractionsResources.Images;
 import edu.colorado.phet.fractions.buildafraction.view.BuildAFractionCanvas;
 import edu.colorado.phet.fractions.fractionsintro.intro.model.Fraction;
 import edu.umd.cs.piccolo.PNode;
-import edu.umd.cs.piccolo.activities.PActivity;
 import edu.umd.cs.piccolo.activities.PInterpolatingActivity;
 import edu.umd.cs.piccolo.event.PBasicInputEventHandler;
 import edu.umd.cs.piccolo.event.PInputEvent;
 import edu.umd.cs.piccolo.nodes.PImage;
-import edu.umd.cs.piccolo.util.PUtil;
 
 import static edu.colorado.phet.fractions.buildafraction.view.BuildAFractionCanvas.controlPanelStroke;
 import static edu.colorado.phet.fractions.fractionsintro.common.view.AbstractFractionsCanvas.INSET;
@@ -56,40 +51,6 @@ public class PictureScoreBoxNode extends PNode {
 
             setStrokePaint( Color.darkGray );
             setStroke( controlPanelStroke );
-
-            matches.addObserver( new VoidFunction1<List<Fraction>>() {
-
-                //Light up if the user matched
-                public void apply( final List<Fraction> fractions ) {
-                    if ( PictureScoreBoxNode.this.fraction != null && fractions.find( new F<Fraction, Boolean>() {
-                        @Override public Boolean f( final Fraction f ) {
-                            return f.approxEquals( PictureScoreBoxNode.this.fraction );
-                        }
-                    } ).isSome() && !completed && flashTargetCellOnMatch ) {
-                        setStrokePaint( Color.red );
-                        doTerminate();
-                        activity = new PInterpolatingActivity( 2000, PUtil.DEFAULT_ACTIVITY_STEP_RATE ) {
-                            public void setRelativeTargetValue( final float zeroToOne ) {
-                                setStroke( new BasicStroke( (float) ( Math.abs( Math.sin( zeroToOne * 4 * 2 ) ) * 4 ), BasicStroke.CAP_ROUND, BasicStroke.JOIN_ROUND, 1f ) );
-                            }
-                        };
-                        activity.setSlowInSlowOut( false );
-                        addActivity( activity );
-                    }
-                    else {
-                        doTerminate();
-                        setStrokePaint( Color.darkGray );
-                        setStroke( controlPanelStroke );
-                    }
-                }
-
-                //Stop the animation in order to change state
-                private void doTerminate() {
-                    if ( activity != null && activity.isStepping() ) {
-                        activity.terminate( PActivity.TERMINATE_AND_FINISH );
-                    }
-                }
-            } );
         }};
         this.fraction = new Fraction( numerator, denominator );
         addChild( this.path );
